<resources>
    <string name="app_name">Nejashi Bookstore</string>

    <string name="facebook_app_id">559399511669422</string>
    <string name="fb_login_protocol_scheme">fb559399511669422</string>
    <string name="google_developer_api_key">AIzaSyAeLSf36sEBp38_hk0TbOU9VfMonhykL1I</string>
    <string name="api_key">AIzaSyAeLSf36sEBp38_hk0TbOU9VfMonhykL1I</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="trending_books">Trending Books</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="books">Books</string>
    <string name="no_book_found">No book found!</string>
    <string name="buy_now">Buy Now</string>
    <string name="book_detail">Book Detail</string>
    <string name="login_with">Login with...</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone_number">Continue with Phone number</string>
    <string name="don_t_worry_we_never_post_on_facebook">Don\'t worry! We never post on Facebook.</string>
    <string name="privacy">Privacy -</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="pl_choose_qty">Please choose quantity</string>
    <string name="add">Add</string>
    <string name="cart_is_empty">Cart is empty!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_my_profile">Create my profile</string>
    <string name="mobile">Mobile Number</string>
    <string name="welcome_title_1">Choose a book</string>
    <string name="welcome_title_2">Choose payment option</string>
    <string name="welcome_title_3">Get it delivered</string>
    <string name="welcome_message_1">Choose your favorite book from our wide range of categories</string>
    <string name="welcome_message_2">We offer various payment options including direct bank transfer</string>
    <string name="welcome_message_3">Get your book delivered to your doorsteps</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="qty">QTY</string>
    <string name="share_with">Share with</string>
    <string name="cart_is_empty_message">Looks like you haven\'t added anything in the cart yet</string>
    <string name="checkout">Checkout</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="address">Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="add_new_location">Add new location</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="title_eg_home_office_etc">Title eg. Home, Office, etc</string>
    <string name="description_eg_landmarks_etc">Description eg. Landmarks etc</string>
    <string name="phone_number">Phone number</string>
    <string name="phonetext">Enter a phone number that can be used to verify your identity with a text message.</string>
    <string name="usa">USA</string>
    <string name="_1">+1</string>
    <string name="your_phone_number">Enter phone number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="confirm">Confirm</string>
    <string name="we_sent_you_a_code_to_verify_your_phone_number">We have sent you a code to verify your phone number</string>
    <string name="send_to">Send to</string>
    <string name="i_did_t_receive_a_code">I didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="please_wait">Please wait...</string>
    <string name="select_country">Select Country</string>
    <string name="enter_correct_number">Enter Correct Number.</string>
    <string name="enter_correct_code">Enter correct verification code</string>
    <string name="pl_enter_title">Please enter title</string>
    <string name="pl_enter_desc">Please enter description</string>
    <string name="pl_enter_mobile">Please enter mobile</string>
    <string name="address_updated_success">Address updated successfully.</string>
    <string name="address_added_success">Address added successfully.</string>
    <string name="shipping">Shipping</string>
    <string name="please_choose_your_place">Please choose your place</string>
    <string name="addis_ababa">Addis Ababa</string>
    <string name="out_of_addis_ababa_but_inside_ethiopia">Out of Addis Ababa but Inside Ethiopia</string>
    <string name="international">International</string>
    <string name="shipping_fee">Shipping Fee:</string>
    <string name="cod">Cash on Delivery</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="card">Card</string>
    <string name="please_choose_payment_option">Please choose payment option</string>
    <string name="place_order">Place Order</string>
    <string name="order_total">Order Total</string>
    <string name="shipping_charges">Shipping charges</string>
    <string name="total">Total</string>
    <string name="order_id">Order Number</string>
    <string name="order_amount">Order Amount</string>
    <string name="order_date">Ordered On</string>
    <string name="pl_sel_address">Please select an address</string>
    <string name="order_status">Order Status</string>
    <string name="view">View</string>
    <string name="item_count">Item count</string>
    <string name="cancel">Cancel</string>
    <string name="in_progress">In Progress</string>
    <string name="pending_payment">Payment Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="out_for_del">Out for delivery</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_details">Order Details</string>
</resources>
