<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp"
        android:id="@+id/cv_deatils">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/order_total"
                    android:textColor="@color/app_color" />

                <TextView
                    android:id="@+id/tv_order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/shipping_charges"
                    android:textColor="@color/app_color" />

                <TextView
                    android:id="@+id/tv_shipping_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/total"
                    android:textColor="@color/app_color" />

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_below="@+id/cv_deatils"
        android:id="@+id/tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/please_choose_payment_option"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_instruction"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_cod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green_light"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cod" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app1:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_bank_transfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/bank_transfer" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app2:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/card" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:background="@drawable/shape_rect_gradient_primary"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/place_order"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>