<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/please_choose_your_place"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_addis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:background="@color/green_light"
                android:text="@string/addis_ababa" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app1:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_out_of_addis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/out_of_addis_ababa_but_inside_ethiopia" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app2:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_international"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/international" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/shipping_fee"
            android:textColor="@color/app_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppinsregular"
            android:text="100 ETB"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>