<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_with"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rl_fb_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/d_fb_bg">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_details_fb_iV_id"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:padding="2dp"
                android:visibility="gone"
                facebook:com_facebook_login_text="" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/facebook_IV_id"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/facebook_IV_id"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_google_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/d_gray_border">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/google_IV_id"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/google_IV_id"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/phone_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/continue_with_phone_number"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/don_t_worry_we_never_post_on_facebook"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/privacy_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="@color/quantum_grey"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/privacy_id"
                android:text="@string/terms_of_service"
                android:textColor="@color/quantum_grey"
                android:textSize="12sp" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>