<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_setup"
            android:textColor="@color/app_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_user" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_round_shadow"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/first_name"
            android:nextFocusForward="@+id/et_password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/monsoon"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_round_shadow"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/last_name"
            android:nextFocusForward="@+id/et_password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/monsoon"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_round_shadow"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/mobile"
            android:inputType="number"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/monsoon"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/shape_rect_gradient_primary"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/create_my_profile"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>